--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       rel="stylesheet"
       href="css/styles.css"
     />
-    <title>project-4</title>
+    <title>Kasper</title>
   </head>
   <body>
     <header>
@@ -40,7 +40,7 @@
           href="#"
           class="logo"
         >
-          <img src="/image/logo.png" />
+          <img src="image/logo.png" />
         </a>
         <nav class="flex">
           <li class="fas fa-bars toggle-menu hidden icon"></li>
@@ -150,7 +150,7 @@
     <div class="section-three">
       <div class="container">
         <div class="image visiblty">
-          <img src="/image/mobile.png" />
+          <img src="image/mobile.png" />
         </div>
         <div class="text flex">
           <h3>OUR DESIGN COMES WITH...</h3>
@@ -173,7 +173,7 @@
           </p>
         </div>
         <div class="shuffle">
-          <ul>
+          <ul class="flex">
             <li>All</li>
             <li>App</li>
             <li>Photo</li>
@@ -182,58 +182,58 @@
           </ul>
         </div>
       </div>
-      <div class="image">
+      <div class="image flex">
         <div class="box">
-          <img src="/image/shuffle-01.jpg" />
+          <img src="image/shuffle-01.jpg" />
           <div class="captin">
             <h4>Awesome Image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box">
-          <img src="/image/shuffle-02.jpg" />
+          <img src="image/shuffle-02.jpg" />
           <div class="captin">
             <h4>Awesome Image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box">
-          <img src="/image/shuffle-03.jpg" />
+          <img src="image/shuffle-03.jpg" />
           <div class="captin">
             <h4>Awesome Image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box">
-          <img src="/image/shuffle-04.jpg" />
+          <img src="image/shuffle-04.jpg" />
           <div class="captin">
             <h4>Awesome Image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box">
-          <img src="/image/shuffle-05.jpg" />
+          <img src="image/shuffle-05.jpg" />
           <div class="captin">
             <h4>Awesome Image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box">
-          <img src="/image/shuffle-06.jpg" />
+          <img src="image/shuffle-06.jpg" />
           <div class="captin">
             <h4>Awesome Image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box">
-          <img src="/image/shuffle-07.jpg" />
+          <img src="image/shuffle-07.jpg" />
           <div class="captin">
             <h4>Awesome Image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box">
-          <img src="/image/shuffle-08.jpg" />
+          <img src="image/shuffle-08.jpg" />
           <div class="captin">
             <h4>Awesome Image</h4>
             <p>Photography</p>
@@ -269,12 +269,12 @@
           </p>
         </div>
         <div class="image">
-          <img src="/image/about.png" />
+          <img src="image/about.png" />
         </div>
       </div>
     </div>
     <div class="stats">
-      <div class="container">
+      <div class="container flex">
         <div class="box">
           <i class="fas fa-mug-hot icon"></i>
           <div class="number">1.236</div>
@@ -306,7 +306,7 @@
             Mauris blandit aliquet elit, eget tincidunt.
           </p>
           <div class="content flex">
-            <img src="/image/skills-01.jpg" />
+            <img src="image/skills-01.jpg" />
             <div class="text">
               Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
               Mauris blandit aliquet elit, eget tincidunt.
@@ -315,7 +315,7 @@
             </div>
           </div>
           <div class="content flex">
-            <img src="/image/skills-02.jpg" />
+            <img src="image/skills-02.jpg" />
             <div class="text">
               Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
               Mauris blandit aliquet elit, eget tincidunt.
@@ -464,7 +464,10 @@
     </div>
     <div class="subscribe">
       <div class="container flex">
-        <form action>
+        <form
+          action
+          class="flex"
+        >
           <i class="far fa-envelope fa-lg"> </i>
           <input
             type="email"
@@ -483,7 +486,7 @@
       </div>
     </div>
     <div class="section-eight">
-      <div class="container">
+      <div class="container flex">
         <div class="section-header flex">
           <h2 class="info">CONTACT US</h2>
           <p>
@@ -491,7 +494,7 @@
             Mauris blandit aliquet elit, eget tincidunt.
           </p>
         </div>
-        <div class="content">
+        <div class="content flex">
           <form>
             <input
               type="text"
@@ -512,6 +515,7 @@
               placeholder="Your Messge"
             ></textarea>
             <input
+              class="flex"
               type="submit"
               value="send message"
             />
@@ -537,11 +541,11 @@
     <div class="footer">
       <div class="container flex">
         <img
-          src="/image/logo.png"
+          src="image/logo.png"
           alt="logo"
         />
         <p>WE ARE SOCIAL</p>
-        <div class="social-icon  flex">
+        <div class="social-icon flex">
           <i class="fab fa-facebook-f icon"></i>
           <i class="fab fa-twitter icon"></i>
           <i class="fas fa-home icon"></i>
